@startuml
title SO DO LOP 3 TANG - LAP PHIEU DOI SOAT
top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHLapPhieuDoiSoat #BFE8BA {
    - txtTimKiemHoSo: TextBox
    - grvHoSoChoDoiSoat: GridView
    - lblMaHoSo: Label
    - lblLoaiHoSo: Label
    - lblHoTenKhachHang: Label
    - lblPhong: Label
    - lblTienCocThucThu: Label
    - lblNgayYeuCau: Label
    - lblTyLeHoanCoc: Label
    - lblTienHoanCoBan: Label
    - grvHoaDonKhauTru: GridView
    - lblTongKhauTru: Label
    - lblTienHoan: Label
    - lblTienThuThem: Label
    - txtGhiChu: TextArea
    - btnTaoPhieuDoiSoat: Button
    - dlgXacNhanTao: AlertDialog
    --
    + taiDanhSachHoSo(tuKhoa: String)
    + taiChiTiet()
    + taoPhieuDoiSoat()
  }
}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class LapPhieuDoiSoat #F4E3A2 {
    + LayDanhSachChoDoiSoat(text: String): IReadOnlyList<HoSoChoDoiSoat>
    + LayChiTietVaTinhToan(maHoSo: String, loaiHoSo: String)
    + TaoPhieuDoiSoat(maHoSo: String, loaiHoSo: String, ghiChu: String, maNhanVien: String): PhieuDoiSoat
    - LayChiTietVaTinhToanInternal(maHoSo: String, loaiHoSo: String)
  }
  class PhieuCoc #F4E3A2 {
    - TrangThai: String
    - TongTien: Decimal
    - ThoiDiemHuy: DateTime
    + LayDanhSachDaHuyChoDoiSoat(): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
    + KiemTraCoTheDoiSoatHoanCoc()
  }
  class PhieuThu #F4E3A2 {
    - SoTienThu: Decimal
    + LayTheoPhieuCoc(maPhieuCoc: String): PhieuThu
    + KiemTraKhopTienCoc(phieuCoc: PhieuCoc)
  }
  class HopDong #F4E3A2 {
    + LayDanhSachChoDoiSoat(): IReadOnlyList<HopDong>
    + LayThongTinLuuTru(maHD: String): HopDong
    + TonTaiTheoPhieuCoc(maPhieuCoc: String): Boolean
    + TinhSoThangThucTe(ngayDoiSoat: DateTime): Integer
    + TinhSoThangHopDong(): Integer
  }
  class ChinhSachHoanCoc #F4E3A2 {
    - TiLe_ChuaKy: Decimal
    + LayChinhSachDangApDung(ngay: DateOnly): ChinhSachHoanCoc
    + LayChinhSachTheoMa(maChinhSach: String): ChinhSachHoanCoc
    + XacDinhTyLeHoan(soThangThucTe: Integer, soThangHopDong: Integer): Decimal
  }
  class HoaDon #F4E3A2 {
    + LayDanhSachChuaThanhToan(maHD: String): IReadOnlyList<HoaDon>
  }
  class PhieuDoiSoat #F4E3A2 {
    - TrangThai: String
    - TienHoan: Decimal
    - TienThuThem: Decimal
    + TaoMoi(maPhieuCoc: String, maHD: String, maNhanVien: String, thoiDiem: DateTime): PhieuDoiSoat
    + TonTaiChoPhieuCocChuaKy(maPhieuCoc: String): Boolean
    + ApDungChinhSachHoanCoc(tyLe: Decimal)
    + TinhTongKhauTru(tongKhauTru: Decimal)
    + TinhToanDoiSoat(tienCoc: Decimal, tyLe: Decimal, dsHoaDon: IReadOnlyList<HoaDon>)
    + ChotKetQua(tienCoc: Decimal)
    + LuuPhieu()
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class PhieuCocDB #BFDCF0 {
    + LayDanhSachDaHuyChoDoiSoat(): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
  }
  class PhieuThuDB #BFDCF0 {
    + LayTheoPhieuCoc(maPhieuCoc: String): PhieuThu
  }
  class HopDongDB #BFDCF0 {
    + LayDanhSachChoDoiSoat(): IReadOnlyList<HopDong>
    + LayThongTinLuuTru(maHD: String): HopDong
    + TonTaiTheoPhieuCoc(maPhieuCoc: String): Boolean
  }
  class ChinhSachHoanCocDB #BFDCF0 {
    + LayChinhSachDangApDung(ngay: DateOnly): ChinhSachHoanCoc
    + GetChinhSachTheoMa(maChinhSach: String): ChinhSachHoanCoc
  }
  class HoaDonDB #BFDCF0 {
    + LayDanhSachChuaThanhToanTheoHD(maHD: String): IReadOnlyList<HoaDon>
  }
  class PhieuDoiSoatDB #BFDCF0 {
    + TonTaiChoPhieuCocChuaKy(maPhieuCoc: String): Boolean
    + LuuPhieu(phieu: PhieuDoiSoat)
  }
}

MHLapPhieuDoiSoat o-- LapPhieuDoiSoat
LapPhieuDoiSoat o-- PhieuCoc
LapPhieuDoiSoat o-- PhieuThu
LapPhieuDoiSoat o-- HopDong
LapPhieuDoiSoat o-- ChinhSachHoanCoc
LapPhieuDoiSoat o-- HoaDon
LapPhieuDoiSoat o-- PhieuDoiSoat
PhieuCoc o-- PhieuCocDB
PhieuThu o-- PhieuThuDB
HopDong o-- HopDongDB
ChinhSachHoanCoc o-- ChinhSachHoanCocDB
HoaDon o-- HoaDonDB
PhieuDoiSoat o-- PhieuDoiSoatDB

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
LapPhieuDoiSoat -[hidden]down- PhieuCocDB
@enduml
